# discourse-sso-oidc-bridge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG.md  ChangeLog  Dockerfile  MANIFEST.in  Pipfile  README.md  dev-requirements.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yaml  test.yaml
discourse_sso_oidc_bridge/: __init__.py  advanced_config.py  app.py  constants.py  default.py  default_config.py  sso.py
discourse_sso_oidc_bridge/templates/: 403.html
docs/: DEV-NOTES.md
example_pkg/: __init__.py
image/: Dockerfile  README.md  main.py
tests/: test_app.py  test_sso.py
