[metadata]
name = discourse-sso-oidc-bridge-consideratio
summary = A Flask app, wrapping a single OpenID Connect issuer with a Discourse SSO provider interface.
homepage = https://github.com/consideratio/discourse-sso-oidc-bridge
author = Erik Sundell
author-email = erik@sundellopensource.se
description-file = README.md
description-content-type = text/markdown
license = Apache License, Version 2.0
classifier =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
